k8s/portal-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-ui
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: portal-ui

  template:
    metadata:
      labels:
        app: portal-ui

    spec:
      containers:
        - name: portal-ui
          image: ghcr.io/lsuthar-coder/portal-ui:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
