k8s/portal-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-ui
  namespace: default

spec:
  type: ClusterIP

  selector:
    app: portal-ui

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
